Corrected a plotting function, resolved merging conflict in the report, Corrected the table

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -344,66 +344,42 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_x-basic}
-<<<<<<< HEAD
-\caption{Horizontal position over time for the basic scenario, where the small lateral displacement is caused by slight thrust asymmetry that induces a small rotation of the vehicle.}
-=======
-\caption{Horizontal position ($x$) over time for the basic scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Horizontal position ($x$) over time for the basic scenario, where the small lateral displacement is caused by slight thrust asymmetry that induces a small rotation of the vehicle.}
 \label{fig:state-x-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dx_dt-basic}
-<<<<<<< HEAD
-\caption{Horizontal velocity over time for the basic scenario, oscillating around zero and indicating minor alternating horizontal accelerations.}
-=======
-\caption{Horizontal velocity ($\dot{x}$) over time for the basic scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Horizontal velocity ($\dot{x}$) over time for the basic scenario, oscillating around zero and indicating minor alternating horizontal accelerations.}
 \label{fig:state-dx-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_y-basic}
-<<<<<<< HEAD
-\caption{Vertical position over time for the basic scenario, showing continuous ascent with no reversal in direction.}
-=======
-\caption{Vertical position ($y$) over time for the basic scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Vertical position ($y$) over time for the basic scenario, showing continuous ascent with no reversal in direction.}
 \label{fig:state-y-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dy_dt-basic}
-<<<<<<< HEAD
-\caption{Vertical velocity over time for the basic scenario, remaining positive and increasing smoothly, confirming upward motion.}
-=======
-\caption{Vertical velocity ($\dot{y}$) over time for the basic scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Vertical velocity ($\dot{y}$) over time for the basic scenario, remaining positive and increasing smoothly, confirming upward motion.}
 \label{fig:state-dy-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_theta-basic}
-<<<<<<< HEAD
-\caption{Pitch angle over time for the basic scenario, where positive and negative values represent alternating nose-up and nose-down orientations.}
-=======
-\caption{Pitch angle ($\theta$) over time for the basic scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Pitch angle ($\theta$) over time for the basic scenario, where positive and negative values represent alternating nose-up and nose-down orientations.}
 \label{fig:state-theta-basic}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dtheta_dt-basic}
-<<<<<<< HEAD
-\caption{Pitch rate over time for the basic scenario, with zero crossings corresponding to changes in rotational direction.}
-=======
-\caption{Pitch rate ($\dot{\theta}$) over time for the basic scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Pitch rate ($\dot{\theta}$) over time for the basic scenario, with zero crossings corresponding to changes in rotational direction.}
 \label{fig:state-dtheta-basic}
 \end{figure}
 
@@ -411,66 +387,47 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_x-horizontal}
-<<<<<<< HEAD
-\caption{Horizontal position over time for the horizontal scenario, showing sustained lateral movement in a single direction.}
-=======
-\caption{Horizontal position ($x$) over time for the horizontal recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Horizontal position ($x$) over time for the horizontal scenario, showing sustained lateral movement in a single direction.}
 \label{fig:state-x-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dx_dt-horizontal}
-<<<<<<< HEAD
-\caption{Horizontal velocity over time for the horizontal scenario, where variations in slope indicate acceleration and deceleration phases.}
-=======
-\caption{Horizontal velocity ($\dot{x}$) over time for the horizontal recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Horizontal velocity ($\dot{x}$) over time for the horizontal scenario, where variations in slope indicate acceleration and deceleration phases.}
 \label{fig:state-dx-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_y-horizontal}
-<<<<<<< HEAD
-\caption{Vertical position over time for the horizontal recovery scenario, decreasing initially then increasing}
-=======
-\caption{Vertical position ($y$) over time for the horizontal recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Vertical position ($y$) over time for the horizontal recovery scenario, decreasing initially then increasing}
 \label{fig:state-y-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dy_dt-horizontal}
-<<<<<<< HEAD
-\caption{Vertical velocity over time for the horizontal recovery scenario, where negative values indicate descent and the zero crossing marks direction reversal.}
-=======
-\caption{Vertical velocity ($\dot{y}$) over time for the horizontal recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Vertical velocity ($\dot{y}$) over time for the horizontal recovery scenario, where negative values indicate descent and the zero crossing marks direction reversal.}
 \label{fig:state-dy-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_theta-horizontal}
-<<<<<<< HEAD
-\caption{Pitch angle over time for the horizontal recovery scenario, showing rapid attitude change followed by gradual stabilization.}
-=======
-\caption{Pitch angle ($\theta$) over time for the horizontal recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Pitch angle ($\theta$) over time for the horizontal recovery scenario, showing rapid attitude change followed by gradual stabilization.}
 \label{fig:state-theta-horizontal}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dtheta_dt-horizontal}
-<<<<<<< HEAD
-\caption{Pitch rate over time for the horizontal recovery scenario, characterized by high initial rotation rates that later reduce in magnitude.}
-=======
-\caption{Pitch rate ($\dot{\theta}$) over time for the horizontal recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Pitch rate ($\dot{\theta}$) over time for the horizontal recovery scenario, characterized by high initial rotation rates that later reduce in magnitude.}
 \label{fig:state-dtheta-horizontal}
 \end{figure}
 
@@ -478,66 +435,44 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_x-roll}
-<<<<<<< HEAD
-\caption{Horizontal position over time for the roll scenario, decreasing continuously, indicating motion opposite to the reference direction.}
-=======
-\caption{Horizontal position ($x$) over time for the roll scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Horizontal position ($x$) over time for the roll scenario, decreasing continuously, indicating motion opposite to the reference direction.}
 \label{fig:state-x-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dx_dt-roll}
-<<<<<<< HEAD
-\caption{Horizontal velocity over time for the roll scenario, remaining negative throughout, confirming persistent backward motion.}
-=======
-\caption{Horizontal velocity ($\dot{x}$) over time for the roll scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Horizontal velocity ($\dot{x}$) over time for the roll scenario, remaining negative throughout, confirming persistent backward motion.}
 \label{fig:state-dx-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_y-roll}
-<<<<<<< HEAD
-\caption{Vertical position over time for the roll scenario, showing alternating ascent and descent with clear extrema.}
-=======
-\caption{Vertical position ($y$) over time for the roll scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Vertical position ($y$) over time for the roll scenario, showing alternating ascent and descent with clear extrema.}
 \label{fig:state-y-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dy_dt-roll}
-<<<<<<< HEAD
-\caption{Vertical velocity over time for the roll scenario, where multiple zero crossings indicate repeated reversals in vertical motion.}
-=======
-\caption{Vertical velocity ($\dot{y}$) over time for the roll scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Vertical velocity ($\dot{y}$) over time for the roll scenario, where multiple zero crossings indicate repeated reversals in vertical motion.}
 \label{fig:state-dy-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_theta-roll}
-<<<<<<< HEAD
-\caption{Pitch angle over time for the roll scenario, exceeding 360°, confirming completion of a full rotational maneuver.}
-=======
-\caption{Pitch angle ($\theta$) over time for the roll scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Pitch angle ($\theta$) over time for the roll scenario, exceeding 360°, confirming completion of a full rotational maneuver.}
 \label{fig:state-theta-roll}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dtheta_dt-roll}
-<<<<<<< HEAD
-\caption{Pitch rate over time for the roll scenario, with large positive values indicating rapid rotation and negative values marking deceleration.}
-=======
-\caption{Pitch rate ($\dot{\theta}$) over time for the roll scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Pitch rate ($\dot{\theta}$) over time for the roll scenario, with large positive values indicating rapid rotation and negative values marking deceleration.}
 \label{fig:state-dtheta-roll}
 \end{figure}
 
@@ -545,66 +480,43 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_x-fall}
-<<<<<<< HEAD
-\caption{Horizontal position over time for the fall scenario, showing continuous forward motion during descent.}
-=======
-\caption{Horizontal position ($x$) over time for the fall recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Horizontal position ($x$) over time for the fall scenario, showing continuous forward motion during descent.}
 \label{fig:state-x-fall}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dx_dt-fall}
-<<<<<<< HEAD
-\caption{Horizontal velocity over time for the fall scenario, increasing almost linearly, indicating constant horizontal acceleration.}
-=======
-\caption{Horizontal velocity ($\dot{x}$) over time for the fall recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Horizontal velocity ($\dot{x}$) over time for the fall scenario, increasing almost linearly, indicating constant horizontal acceleration.}
 \label{fig:state-dx-fall}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_y-fall}
-<<<<<<< HEAD
-\caption{Vertical position over time for the fall scenario, decreasing to a minimum before slight recovery, marking the lowest altitude reached.}
-=======
-\caption{Vertical position ($y$) over time for the fall recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+
+\caption{Vertical position ($y$) over time for the fall scenario, decreasing to a minimum before slight recovery, marking the lowest altitude reached.}
 \label{fig:state-y-fall}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dy_dt-fall}
-<<<<<<< HEAD
-\caption{Vertical velocity over time for the fall scenario, negative during free fall and approaching zero as recovery thrust is applied.}
-=======
-\caption{Vertical velocity ($\dot{y}$) over time for the fall recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Vertical velocity ($\dot{y}$) over time for the fall scenario, negative during free fall and approaching zero as recovery thrust is applied.}
 \label{fig:state-dy-fall}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_theta-fall}
-<<<<<<< HEAD
-\caption{Pitch angle over time for the fall scenario, showing progressive nose-down rotation caused by loss of vertical stability.}
-=======
-\caption{Pitch angle ($\theta$) over time for the fall recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Pitch angle ($\theta$) over time for the fall scenario, showing progressive nose-down rotation caused by loss of vertical stability.}
 \label{fig:state-theta-fall}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{state_dtheta_dt-fall}
-<<<<<<< HEAD
-\caption{Pitch rate over time for the fall scenario, oscillating with sign changes that reflect alternating corrective rotational actions.}
-=======
-\caption{Pitch rate ($\dot{\theta}$) over time for the fall recovery scenario.}
->>>>>>> 63df89f52b19943aac79d78181552260828979a4
+\caption{Pitch rate ($\dot{\theta}$) over time for the fall scenario, oscillating with sign changes that reflect alternating corrective rotational actions.}
 \label{fig:state-dtheta-fall}
 \end{figure}
 
@@ -656,7 +568,7 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{robustness_rmse-horizontal}
-\caption{EKF RMSE across four noise levels for each state (horizontal recovery scenario). As expected, $x$ is still different from the rest, for the same reasons described in Figure 36 description. Maximum RMSE values have grown compared to the basic cases because of the increased movement complexity.}
+\caption{EKF RMSE across four noise levels for each state (horizontal recovery scenario). As expected, $x$ is still different from the rest, for the same reasons as described in Figure \ref{fig:rmse-ekf-basic} description. Maximum RMSE values have grown compared to the basic cases because of the increased movement complexity.}
 \label{fig:rmse-ekf-horizontal}
 \end{figure}
 
@@ -670,7 +582,7 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{robustness_rmse-fall}
-\caption{EKF RMSE across four noise levels for each state (fall recovery scenario). For a simple motion, same RMSE trend is seen as for the basic case, with similar RMSE values as well.}
+\caption{EKF RMSE across four noise levels for each state (fall recovery scenario). For a simple motion, same RMSE trend is seen as for the basic case (fig. \ref{fig:rmse-ekf-basic}), with similar RMSE values as well.}
 \label{fig:rmse-ekf-fall}
 \end{figure}
 
@@ -721,7 +633,7 @@
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\linewidth]{rmse_growth_linear-roll}
-\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, roll scenario). Another case, another running mean multiplier change, EKF stable as in the two previous examples.}
+\caption{RMSE growth for $y$, $\dot{y}$, $\theta$, and $\dot{\theta}$ under increasing noise (linear scale, roll scenario). Another case, another running mean multiplier change, EKF stable as in the two previous examples (figs. \ref{fig:rmse-growth-linear-basic}, \ref{fig:rmse-growth-linear-horizontal}}
 \label{fig:rmse-growth-linear-roll}
 \end{figure}
 
@@ -740,12 +652,11 @@
         \toprule
         \textbf{Variable} & \textbf{Kalman RMSE} & \textbf{Running Mean RMSE} & \textbf{Unfiltered RMSE} \\
         \midrule
-        $x$               & 0.0417 & 0.6632 & 0.0098 \\
-        $\dot{x}$         & 0.0222 & 0.1866 & 0.0101 \\
-        $y$               & 0.0084 & 0.5453 & 0.0104 \\
-        $\dot{y}$         & 0.0659 & 0.1902 & - \\
-        $\theta$          & 0.0084 & 0.0100 & - \\
-        $\dot{\theta}$    & 0.0083 & 0.0095 & - \\
+        $x$               & 0.0417 & 0.6632 & - \\
+        $\dot{x}$         & 0.0222 & 0.1866 & - \\
+        $y$               & 0.0084 & 0.5453 & 0.0098 \\
+        $\dot{y}$         & 0.0659 & 0.1902 & - \\        $\theta$          & 0.0084 & 0.0100 & 0.0101 \\
+        $\dot{\theta}$    & 0.0083 & 0.0095 & 0.0104 \\
         \bottomrule
     \end{tabular}
 \end{table}
